--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Ordenar 3 números</title>
+    <title>Documento sin titulo</title>    
 </head>
 <body>
-    <div id="numbers"></div>
-    <div id="result"></div>
-<script src="clase6.js"></script>
 </body>
 </html>
