--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Documento sin titulo</title>    
+    <title>Documento sin titulo</title>
+    <link href="clase6.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <h1>Proyecto Bonarssss</h1>
 </body>
 </html>
