--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="clase6.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Proyecto Bonarssss</h1>    
+    <h1>Proyecto Bonarssss</h1>
+    <p>PRUEBA DE AGREDADO DE PARRAFO</p>
 </body>
 </html>
