--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Documento sin titulo</title>
     <link href="clase6.css" rel="stylesheet" type="text/css">
+
+    <script src="clase6.js"></script>
 </head>
 <body>
     <h1>Proyecto Bonarssss</h1>
     <p>PRUEBA DE AGREDADO DE PARRAFO</p>
+    <input type="button" onclick="saludo()" value="Dale que va!">
 </body>
 </html>
