--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Proyecto Bonarssss</h1>
     <p>PRUEBA DE AGREDADO DE PARRAFO</p>
+    <p>PRUEBA DE AGREDADO DE PARRAFO2</p>
 </body>
 </html>
